UX-3222: Fix modal alignment

--- a/src/css/awinTheme.css
+++ b/src/css/awinTheme.css
@@ -9191,7 +9191,6 @@ button.ui-dialog-titlebar-close {
 .modal-body {
     position: relative;
     background-color: #f1f1f1;
-    text-align: center;
     max-height: 550px;
     overflow-y: scroll;
 }
